--- a/book/src/04_3_i2c.md
+++ b/book/src/04_3_i2c.md
@@ -1,1 +1,14 @@
-# I2C
+# I²C
+
+## Introduction
+
+TODO describe protocol & purpose
+
+## Read temperature & humidity using the `lis3dh` crate
+
+TODO
+
+## Write your own I²C driver for the IMU
+
+TODO
+
