http client + server exercises

--- a/book/src/04_3_i2c.md
+++ b/book/src/04_3_i2c.md
@@ -3,6 +3,7 @@
 ## Introduction
 
 TODO describe protocol & purpose
+TODO https://learn.sparkfun.com/tutorials/i2c
 
 ## Read temperature & humidity using the `lis3dh` crate
 
@@ -11,4 +12,5 @@ TODO
 ## Write your own I²C driver for the IMU
 
 TODO
+
 
