--- a/book/src/03_5_2_mqtt.md
+++ b/book/src/03_5_2_mqtt.md
@@ -1,12 +1,16 @@
-# MQTT Exercise
+# MQTT Exercise Part 1: Publishing the board temperature. 
 
 ## Setup
 
-You can find a prepared project skeleton in `intro/mqtt/exercise`. 
+✅ You can find a prepared project skeleton in `intro/mqtt/exercise`. 
 
-❗️ Similar to the http exercises you need to configure your WiFi credentials in `cfg.toml`, but here you'll also need to add MQTT server details. Check `cfg.toml.example` for required settings.
+✅ In `intro/mqtt/example_client` you can find a host run program that mimics the behavior of a second client. Run it in a separate terminal. Find more information about the example client below. 
 
-## Part 1: Publishing the board temperature. 
+The client also publishes messages that are only relevant for the second part of this exercise. 
+
+❗️ Similar to the http exercises you need to configure your connection credentials in `cfg.toml` for both programs. Besides WiFi credentials you'll also need to add MQTT server details. Check each `cfg.toml.example` for required settings.
+
+## Tasks
 
 ✅ Create an `EspMqttClient` with a default configuration and an empty handler closure.
 
@@ -33,10 +37,9 @@ let mut client = EspMqttClient::new_with_callback(url, &cfg, move |message_event
 };
 ```
 
-
 ## Support tools & crates
 
-To log the sensor values sent by the board, a helper client is provided under `intro/mqtt/example_client`. It subscribes to the board temperature topic.
+To log the sensor values sent by the board, a helper client is provided under `intro/mqtt/example_client`. It subscribes to the temperature topic.
 
 The `mqtt_messages` crate (located in `common/lib`) supports handling messages, subscriptions and topics:
 ### Functions to generate topic strings
@@ -50,7 +53,7 @@ The board temperature `f32` float is converted to four "big endian" bytes using 
 
 ```rust
 // temperature
-let temperature_data = temp.to_be_bytes() as &[u8]; // board
+let temperature_data = &temp.to_be_bytes() as &[u8]; // board
 let decoded_temperature = f32::from_be_bytes(temperature_data); // workstation
 ```
 
