--- a/book/src/04_3_i2c.md
+++ b/book/src/04_3_i2c.md
@@ -11,12 +11,28 @@ TODO I2C signal image
 
 
 
-## Read temperature & humidity using the `lis3dh` crate
+## Read temperature & humidity using existing crates
 
-TODO
+generate the relevant docs using the following command:
+
+Define two pins, one as SDA and one as SCL. Use them to instantiate an Instance of the I2C peripheral. 
+
+Using the existing driver crates, make an instance of each sensor, passing the I2C instance into them. 
+
+
+
 
 ## Write your own I²C driver for the IMU
 
-TODO
+We're not going to write an entire driver, merely the first step: the `hello world` of driver writing: reading the serial number of the driver. 
+
+Register Address where the serial number is:
+WHOAMI = 0x0F
+The serial number:
+
+write_read 
+
+How to continue from here:
+
 
 
