--- a/book/src/04_3_i2c.md
+++ b/book/src/04_3_i2c.md
@@ -14,6 +14,16 @@ TODO I2C signal image
 ## I2C Driver Exercise
 
 TODO `i2c-driver/exercise/src/imc42670p.rs` is a gap text of a very basic i2c IMU sensor driver. The task is to complete the file, so that running `main.rs` will log the device ID of the driver. The this gap text driver is based on the version of the same name that lives in common, but provides a little bit more functionality.
+## Read temperature & humidity using existing crates
+
+generate the relevant docs using the following command:
+
+Define two pins, one as SDA and one as SCL. Use them to instantiate an Instance of the I2C peripheral. 
+
+Using the existing driver crates, make an instance of each sensor, passing the I2C instance into them. 
+
+
+
 
 TODO `i2c-driver/exercise/src/main.rs` contains working code. Running it without modifying the driver file will yield errors. 
 
@@ -24,5 +34,15 @@ TODO `i2c-driver/exercise/src/main.rs` contains working code. Running it without
 TODO `i2c-sensor-reading/exercise/src/main.rs` is an exercise skeleton that will build. The task is to use an existing driver from crates.io to read out the temperature and humidity sensor over i2c. After that, a second sensor will be read out over the same i2c bus using `shared-bus`. The driver for the second sensor is available locally in `common/`.
 
 `i2c-sensor-reading/solution/src/main.rs` contains a working solution.
+We're not going to write an entire driver, merely the first step: the `hello world` of driver writing: reading the serial number of the driver. 
+
+Register Address where the serial number is:
+WHOAMI = 0x0F
+The serial number:
+
+write_read 
+
+How to continue from here:
+
 
 
