fix: made the figure more explicit

--- a/book/src/03_5_2_mqtt.md
+++ b/book/src/03_5_2_mqtt.md
@@ -12,7 +12,7 @@ The client also publishes messages that are only relevant for the second part of
 
 The structure of the exercise is as below:
 
-![example_client_broker_board](./assets/mqtt_structure.png)
+![example_client_broker_board](./assets/mqtt_structure.svg)
 
 ## Tasks
 
