Restored color data changes

--- a/book/src/03_5_1_mqtt.md
+++ b/book/src/03_5_1_mqtt.md
@@ -2,6 +2,8 @@
 
 ❗️This exercise requires an MQTT server. If you're participating in a Ferrous Systems training, login credentials for a server operated by Espressif will be made available in the workshop, otherwise you can use one listed at <https://test.mosquitto.org/> or install one locally.
 
+TODO: Test that it works!
+
 To conclude the introductory course, let's add some [IoT](https://en.wikipedia.org/wiki/Internet_of_things) functionality to the board. 
 Our goal here is have it send out real-time updates of sensor values without having to poll repeatedly, like we would with an HTTP server, and also receive commands to change the board LED color.
 
