--- a/book/src/03_5_2_mqtt.md
+++ b/book/src/03_5_2_mqtt.md
@@ -6,15 +6,15 @@
 
 ✅ In `intro/mqtt/example_client` you can find a host run program that mimics the behavior of a second client. Run it in a separate terminal. Find more information about the example client below. 
 
-The client also publishes messages that are only relevant for the second part of this exercise. 
+The client also generates randomly RGB colors, and publishes this in another topic.
+**This is only relevant for the second part of this exercise**. 
 
-❗️ Similar to the http exercises you need to configure your connection credentials in `cfg.toml` for both programs. Besides WiFi credentials you'll also need to add MQTT server details. Check each `cfg.toml.example` for required settings.
+❗️ Similar to the http exercises you need to configure your connection credentials in `cfg.toml` for both programs. Besides WiFi credentials you'll also need to add MQTT server details. Check each `cfg.toml.example` for required settings. Remember the name between brackets in the the `cfg.toml` file is the name of the package in `Cargo.toml`.
 
-The structure of the exercise is as below:
+The structure of the exercises is as below. In this part, we will focus on the Temperature topic.
 
 ![example_client_broker_board](./assets/mqtt_structure.svg)
 
-## Tasks
 
 ✅ Create an `EspMqttClient` with a default configuration and an empty handler closure.
 
@@ -49,6 +49,7 @@ The `mqtt_messages` crate (located in `common/lib`) supports handling messages, 
 ### Functions to generate topic strings
 - `hello_topic(uuid)` - test topic for initially verifying a successful connection
 - `temperature_data_topic(uuid)` - creates a whole "temperature" topic string 
+-  `color_topic(uuid)` - creates a topic to send colors that will be published to the board.
 - `cmd_topic_fragment(uuid)` - creates the leading part of a "command" topic (the `a-uuid/command/` part in `a-uuid/command/board_led`)
 
 ### Encoding and decoding message payloads
@@ -81,4 +82,6 @@ client.publish(publish_topic, QoS::AtLeastOnce, false, payload)?;
 - `error: expected expression, found .` when building example client: update your stable Rust installation to 1.58 or newer
 - MQTT messages not showing up? make sure all clients (board and workstation) use the same UUID (you can see it in the log output)
 - Make sure the `cfg.toml` file is configured properly. The `example-client` has a `dbg!()` output at the start of the program, that shows `mqtt` configuration.
+
+- Make sure the `cfg.toml` file is configured properly. The `example-client` has a `dbg!()` output at the start of the program, that shows `mqtt` configuration. It should output the content of your `cfg.toml` file.
 
