fix: text to fit ColorData

--- a/book/src/03_5_2_mqtt.md
+++ b/book/src/03_5_2_mqtt.md
@@ -15,12 +15,13 @@ The structure of the exercises is as below. In this part, we will focus on the T
 
 ![example_client_broker_board](./assets/mqtt_structure.svg)
 
+## Tasks
 
 ✅ Create an `EspMqttClient` with a default configuration and an empty handler closure.
 
 ✅ Send an empty message under the `hello` topic to the broker. Use the `hello_topic(uuid)` utility function to generate a properly scoped topic.
 
-✅ Verify a successful publish by having a client connected that logs these messages. The `example_client` implements this behavior.
+✅ Verify a successful publish by having a client connected that logs these messages. The `example_client` implements this behavior. You should run it in another terminal.
 
 ✅ In the loop at the end of your main function, publish the board temperature every second. Verify this, too.
 
@@ -46,11 +47,13 @@ let mut client = EspMqttClient::new_with_callback(url, &cfg, move |message_event
 To log the sensor values sent by the board, a helper client is provided under `intro/mqtt/example_client`. It subscribes to the temperature topic.
 
 The `mqtt_messages` crate (located in `common/lib`) supports handling messages, subscriptions and topics:
+
 ### Functions to generate topic strings
-- `hello_topic(uuid)` - test topic for initially verifying a successful connection
-- `temperature_data_topic(uuid)` - creates a whole "temperature" topic string 
 -  `color_topic(uuid)` - creates a topic to send colors that will be published to the board.
 - `cmd_topic_fragment(uuid)` - creates the leading part of a "command" topic (the `a-uuid/command/` part in `a-uuid/command/board_led`)
+- `hello_topic(uuid)` - test topic for initially verifying a successful connection
+- `temperature_data_topic(uuid)` - creates a whole "temperature" topic string 
+
 
 ### Encoding and decoding message payloads
 
@@ -81,7 +84,5 @@ client.publish(publish_topic, QoS::AtLeastOnce, false, payload)?;
 
 - `error: expected expression, found .` when building example client: update your stable Rust installation to 1.58 or newer
 - MQTT messages not showing up? make sure all clients (board and workstation) use the same UUID (you can see it in the log output)
-- Make sure the `cfg.toml` file is configured properly. The `example-client` has a `dbg!()` output at the start of the program, that shows `mqtt` configuration.
-
 - Make sure the `cfg.toml` file is configured properly. The `example-client` has a `dbg!()` output at the start of the program, that shows `mqtt` configuration. It should output the content of your `cfg.toml` file.
 
