--- a/book/src/03_5_3_mqtt.md
+++ b/book/src/03_5_3_mqtt.md
@@ -1,25 +1,22 @@
 # MQTT Exercise: Receiving LED Commands
 
-✅ Subscribe to all "command" messages, combining `cmd_topic_fragment(uuid)` with a trailing `#` wildcard
+✅ Subscribe to `color_topic(uuid)`
 
-✅ Verify your subscription is working by logging the received topic and running the `example_client` in parallel. You should receive a board LED command roughly every second.
+✅ Verify your subscription is working by logging the received topic and running the `example_client` in parallel in it's own terminal. You should receive a board LED command roughly every second.
 
 ✅ React to the LED commands by setting the newly received color
 
 ### Encoding and decoding message payloads
 
 The board LED commands are made of three bytes indicating red, green and blue.
-    - `enum Command`: represents all possible commands (here: just `BoardLed`).
-    - `RawCommandData` stores the last part of a message topic (e.g. `board_led` in `a-uuid/command/board_led`). It can be converted into a `Command` using `try_from`.
+    - `enum ColorData` contains a topic `color_topic(uuid)` and the `BoardLed`
+    - it can convert the `data()` field of an `EspMqttMessage` by using `try_from()`. The message needs first to be coerced into a slice, using `let message_data: &[u8] = &message.data();`
+    
 
 ```rust
 // RGB LED command
-let raw = RawCommandData {
-    path: command,
-    data: message.data(),
-};
 
-if let Ok(cmd) = Command::try_from(raw) { /* set new color here */ }
+if let Ok(ColorData::BoardLed(color)) = ColorData::try_from(message_data) { /* set new color here */ }
 ```
 
 ## Publish & Subscribe
@@ -38,39 +35,86 @@ The `message_event` parameter in the handler closure is of type `Option<Result<E
 Since we're only interested in processing successfully received messages, we can make use of deep pattern matching:
 
 ```rust
-if let Some(Ok(Received(message))) = message_event {
+
     match message.details() {
-        Details::Complete(token) => {
+        Complete(token) => {
             // all messages in this exercise will be of type `Complete`
             // the other variants of the `Details` enum
             // are for larger message payloads
 
-            // Cow<str> behaves a lot like other Rust strings (&str, String)
-            let topic: Cow<str> = message.topic(token); 
+            // Cow<&[u8]> can be coerced into a slice &[u8] or a Vec<u8>
+            // there is an impl block to convert a slice to a color in lib, use it:
+            let message_data: &[u8] = &message.data();
+            if let Ok(ColorData::BoardLed(color)) = ColorData::try_from(message_data) {
+                // set the LED to the newly received color
 
-            // determine if we're interested in this topic and
-            // dispatch based on its content
-            let is_command_topic: bool = /* ... */;
-            if is_command_topic {
-                let raw = RawCommandData { /* ... */ };
-                if let Ok(Command::BoardLed(color)) = Command::try_from(raw) {
-                    // set the LED to the newly received color
-                }
-            
-            },
+            }
+        }
+        // Use Rust Analyzer to generate the missing match arms.
+        
+    }
+
+```
+
+
+## Hints
+
+- TODO more hints here
+
+## Extra tasks
+
+### Implement MQTT with hierarchical topics
+
+- Implement the same task but by subscribing to all "command" messages, combining `cmd_topic_fragment(uuid)` with a trailing `#` wildcard to practice hierarchy in mqtt.
+
+- Use `enum Command` instead of `enum ColorData`. `enum Command` represents all possible commands (here: just `BoardLed`).
+
+- `RawCommandData` stores the last part of a message topic (e.g. `board_led` in `a-uuid/command/board_led`). It can be converted into a `Command` using `try_from`.
+
+```rust
+// RGB LED command
+let raw = RawCommandData {
+    path: command,
+    data: message.data(),
+};
+
+if let Ok(cmd) = Command::try_from(raw) { /* set new color here */ }
+```
+
+- the `message_event` parameter in the handler closure is of type `Option<Result<Event<EspMqttMessage>>>`.
+Since we're only interested in processing successfully received messages, we can make use of deep pattern matching:
+
+```rust
+match message.details() {
+    Details::Complete(token) => {
+        // all messages in this exercise will be of type `Complete`
+        // the other variants of the `Details` enum
+        // are for larger message payloads
+
+        // Cow<str> behaves a lot like other Rust strings (&str, String)
+        let topic: Cow<str> = message.topic(token); 
+
+        // determine if we're interested in this topic and
+        // dispatch based on its content
+        let is_command_topic: bool = /* ... */;
+        if is_command_topic {
+            let raw = RawCommandData { /* ... */ };
+            if let Ok(Command::BoardLed(color)) = Command::try_from(raw) {
+                // set the LED to the newly received color
+            }
+        
+        },
         _ => {}
         }
     }
 }
 ```
 
+#### Hints!
 
-## Hints
+- Since you will be iterating over a MQTT topic, you will need to `split()` on a string returns an iterator. You can access a specific item from an iterator using [`nth()`](https://doc.rust-lang.org/std/iter/trait.Iterator.html#method.nth).
 
-- `split()` on a string returns an iterator. You can access a specific item from an iterator using [`nth()`](https://doc.rust-lang.org/std/iter/trait.Iterator.html#method.nth).
-- TODO more hints here
-
-## Extra tasks
+### Other tasks
 
 - leverage [`serde_json`](https://docs.serde.rs/serde_json/) to encode/decode your message data as JSON.
 - Send some messages with a large payload from the example client and process them on the microcontroller. Large messages will be delivered in parts instead of `Details::Complete`:
