--- a/book/src/03_5_3_mqtt.md
+++ b/book/src/03_5_3_mqtt.md
@@ -2,9 +2,9 @@
 
 ✅ Subscribe to `color_topic(uuid)`
 
-✅ Verify your subscription is working by logging the received topic and running the `example_client` in parallel in it's own terminal. You should receive a board LED command roughly every second.
+✅ Verify your subscription is working by logging the received topic and running the `example_client` in parallel in it's own terminal. The example_client is subscribed to the `ColorData.topic` and sends a board LED `color` roughly every second.
 
-✅ React to the LED commands by setting the newly received color
+✅ React to the LED commands by setting the newly received color to the board with `led.set_pixel(/* received color here */)`.
 
 ### Encoding and decoding message payloads
 
@@ -32,18 +32,26 @@ client.subscribe(subscribe_topic, QoS::AtLeastOnce)
 
 
 The `message_event` parameter in the handler closure is of type `Option<Result<Event<EspMqttMessage>>>`.
-Since we're only interested in processing successfully received messages, we can make use of deep pattern matching:
+Since we're only interested in processing successfully received messages, we can make use of deep pattern matching into the closure:
 
 ```rust
+let mut client =
+        EspMqttClient::new_with_callback(broker_url, &mqtt_config, move |message_event| {
+            if let Some(Ok(Received(message))) = message_event {
+                /* process_message() function here */
+            }
+        })?;
+```
 
+In the processing function, you will handle `Complete` messages. Use Rust Analyzer to generate the missing match arms.
+```rust
     match message.details() {
+        // all messages in this exercise will be of type `Complete`
+        // the other variants of the `Details` enum are for larger message payloads
         Complete(token) => {
-            // all messages in this exercise will be of type `Complete`
-            // the other variants of the `Details` enum
-            // are for larger message payloads
-
+            
             // Cow<&[u8]> can be coerced into a slice &[u8] or a Vec<u8>
-            // there is an impl block to convert a slice to a color in lib, use it:
+            // You can coerce it into a slice to be sent to try_from()
             let message_data: &[u8] = &message.data();
             if let Ok(ColorData::BoardLed(color)) = ColorData::try_from(message_data) {
                 // set the LED to the newly received color
@@ -53,19 +61,21 @@ Since we're only interested in processing successfully received messages, we can
         // Use Rust Analyzer to generate the missing match arms.
         
     }
-
 ```
 
 
 ## Hints
 
-- TODO more hints here
+- Use a logger to see what you are receiving, for example: `info!("{}", color);` or `dbg!(color)`.
 
 ## Extra tasks
 
 ### Implement MQTT with hierarchical topics
 
-- Implement the same task but by subscribing to all "command" messages, combining `cmd_topic_fragment(uuid)` with a trailing `#` wildcard to practice hierarchy in mqtt.
+- Implement the same procedure but by using MQTT hierarchy. Subscribe subscribing to all "command" messages, combining `cmd_topic_fragment(uuid)` with a trailing `#` wildcard.
+
+- in the example client, you will need to change to replace `color` with `command`. For example, unquote this line `//let command = Command::BoardLed(color);` and quote the corresponding `let color = ColorData::BoardLed(color);`
+`
 
 - Use `enum Command` instead of `enum ColorData`. `enum Command` represents all possible commands (here: just `BoardLed`).
 
@@ -78,11 +88,8 @@ let raw = RawCommandData {
     data: message.data(),
 };
 
-if let Ok(cmd) = Command::try_from(raw) { /* set new color here */ }
 ```
-
-- the `message_event` parameter in the handler closure is of type `Option<Result<Event<EspMqttMessage>>>`.
-Since we're only interested in processing successfully received messages, we can make use of deep pattern matching:
+- in the `process_message()` function you will need to parse the topic.
 
 ```rust
 match message.details() {
