--- a/book/src/03_5_3_mqtt.md
+++ b/book/src/03_5_3_mqtt.md
@@ -120,6 +120,7 @@ match message.details() {
 #### Hints!
 
 - Since you will be iterating over a MQTT topic, you will need to `split()` on a string returns an iterator. You can access a specific item from an iterator using [`nth()`](https://doc.rust-lang.org/std/iter/trait.Iterator.html#method.nth).
+- The solution implementing hiearchy can be run with `cargo espflash --release --example solution2 --monitor /dev/ttyUSB0`, while the solution without can be run with `cargo espflash --release --monitor /dev/ttyUSB0` or `cargo espflash --release --example solution1 --monitor /dev/ttyUSB0`
 
 ### Other tasks
 
