fix: removed chunks management from the simple solution

--- a/book/src/03_5_3_mqtt.md
+++ b/book/src/03_5_3_mqtt.md
@@ -43,7 +43,7 @@ let mut client =
         })?;
 ```
 
-In the processing function, you will handle `Complete` messages. Use Rust Analyzer to generate the missing match arms.
+In the processing function, you will handle `Complete` messages. Use Rust Analyzer to generate the missing match arms or match any other type of response by logging an `info!()`.
 ```rust
     match message.details() {
         // all messages in this exercise will be of type `Complete`
@@ -58,7 +58,7 @@ In the processing function, you will handle `Complete` messages. Use Rust Analyz
 
             }
         }
-        // Use Rust Analyzer to generate the missing match arms.
+        // Use Rust Analyzer to generate the missing match arms or match an incomplete message with a log message.
         
     }
 ```
@@ -126,6 +126,7 @@ match message.details() {
 
 - leverage [`serde_json`](https://docs.serde.rs/serde_json/) to encode/decode your message data as JSON.
 - Send some messages with a large payload from the example client and process them on the microcontroller. Large messages will be delivered in parts instead of `Details::Complete`:
+
 ```rust
 InitialChunk(chunk_info) => { /* first chunk */},
 SubsequentChunk(chunk_data) => { /* all subsequent chunks */ }
