--- a/book/src/04_3_i2c.md
+++ b/book/src/04_3_i2c.md
@@ -2,21 +2,118 @@
 
 ## Introduction
 
-TODO describe protocol & purpose
-TODO https://learn.sparkfun.com/tutorials/i2c
+The I2C (Inter-Integrated Circuit) protocol allows multiple peripheral chips to communicate with one or more controller chips. Many devices can be connected to the same I2C bus and messages can be send to a particular device by specifying its I2C address. The protocol requires two signal wires and can only be used for short distance communications within one device. 
 
+One of the signal lines is for data (SDA) and the other is for the clock signal (SCL). An I2C transaction consists of one or more messages. Each message begins with a start symbol. A message is either write or read, indicated by the next bit in the row. Following this comes the actual message in form of bytes. The message ends with a stop symbol. The clock signal rises and falls in a specified frequency.
+
+TODO I2C signal image
 ## I2C Driver Exercise
+
+We're not going to write an entire driver, merely the first step: the `hello world` of driver writing: reading the device ID of the sensor. 
 
 TODO `i2c-driver/exercise/src/imc42670p.rs` is a gap text of a very basic i2c IMU sensor driver. The task is to complete the file, so that running `main.rs` will log the device ID of the driver. The this gap text driver is based on the version of the same name that lives in common, but provides a little bit more functionality.
 
-TODO `i2c-driver/exercise/src/main.rs` contains working code. Running it without modifying the driver file will yield errors. 
+### Driver API
 
-`i2c-driver/solution/src/imc42670p.rs` provides a solution to the task. 
+#### Instance of the Sensor
+
+To use a peripheral sensor first you must get an instance of the it. The sensor is represented as a struct that contains it address and the i2c bus. This is done using traits defined in the `embedded-hal` crate. We implement an instantiating method. Note that written this way, the sensor instance takes ownership of the i2c bus.
+
+```rust 
+#[derive(Debug)]
+pub struct IMC42670P<I2C> {
+    /// The concrete I²C device implementation.
+    i2c: I2C,
+
+    /// Device address
+    address: SlaveAddr,
+}
+
+// ...
+
+impl<I2C, E>IMC42670P<I2C>
+where
+    I2C: i2c::WriteRead<Error = E> + i2c::Write<Error = E>,
+{
+    /// Create a new instance of the IMC42670P.
+    pub fn new(i2c: I2C, address: SlaveAddr) -> Result<Self, E> {
+
+        let imc42670p = IMC42670P { i2c, address };
+
+        Ok(imc42670p)
+    }
+// ...
+```
+
+#### Representation of Registers 
+
+Registers are represented as enums. Each variant has the register's address as value. The type `Register` implements a method that exposes the variant's address.
+
+```Rust 
+#[derive(Clone, Copy)]
+pub enum Register {
+    WhoAmI = 0x75,
+}
+
+impl Register {
+    fn address(&self) -> u8 {
+        *self as u8
+    }
+}
+
+```
+
+#### read and write
+
+We define a read and a write method, based on methods provided by the `embedded-hal` crate. Note how the read_register() method is based on a write_read method. The reason for this lie in the characteristics of the i2c protocol: we need to write a command over the i2c bus to be able to access bits in a register. Note how these methods don't have a `pub` before their name. Methods only have a `pub` if they have to be used from outside this crate. 
+
+```rust
+impl<I2C, E>IMC42670P<I2C>
+where
+    I2C: i2c::WriteRead<Error = E> + i2c::Write<Error = E>,
+{    
+    //...
+    fn write_register(&mut self, register: Register, value: u8) -> Result<(), E> {
+        let byte = value as u8;
+        self.i2c
+            .write(self.address as u8, &[register.address(), byte])
+    }
+
+    fn read_register(&mut self, register: Register) -> Result<u8, E> {
+        let mut data = [0];
+        self.i2c
+            .write_read(self.address as u8, &[register.address()], &mut data)?;
+        Ok(u8::from_le_bytes(data))
+    }
+}
+```
+
+✅ Implement a public method that reads the `WHOAMI` register with the address `0x0F`. 
+✅ Optional: Implement further methods that add features to the driver. Check the [documentation](https://3cfeqx1hf82y3xcoull08ihx-wpengine.netdna-ssl.com/wp-content/uploads/2021/07/DS-000451-ICM-42670-P-v1.0.pdf) for the respective registers and their addresses. Some ideas:
+    * switching the the gyroscope sensor or the accelerometer on
+    * starting measurements
+    * reading measurements
+
+TODO: Add general info about how registers work
 
 ## I2C Sensor Reading Exercise
 
 TODO `i2c-sensor-reading/exercise/src/main.rs` is an exercise skeleton that will build. The task is to use an existing driver from crates.io to read out the temperature and humidity sensor over i2c. After that, a second sensor will be read out over the same i2c bus using `shared-bus`. The driver for the second sensor is available locally in `common/`.
 
 `i2c-sensor-reading/solution/src/main.rs` contains a working solution.
+
+
+* Define two pins, one as SDA and one as SCL. Use them to instantiate an Instance of the I2C peripheral. 
+
+* Using the existing driver crates, make an instance of each sensor, passing the I2C instance into them. 
+
+
+TODO `i2c-driver/exercise/src/main.rs` contains working code. Running it without modifying the driver file will yield errors. 
+
+`i2c-driver/solution/src/imc42670p.rs` provides a solution to the task. 
+
+
+
+
 
 
