--- a/book/src/04_3_i2c.md
+++ b/book/src/04_3_i2c.md
@@ -17,7 +17,7 @@ TODO `i2c-driver/exercise/src/imc42670p.rs` is a gap text of a very basic i2c IM
 
 #### Instance of the Sensor
 
-To use a peripheral sensor first you must get an instance of the it. The sensor is represented as a struct that contains it address and the i2c bus. This is done using traits defined in the `embedded-hal` crate. We implement an instantiating method. Note that written this way, the sensor instance takes ownership of the i2c bus.
+To use a peripheral sensor first you must get an instance of the it. The sensor is represented as a struct that contains it address and the i2c bus. This is done using traits defined in the `embedded-hal` crate. The struct is public as it needs to be accessible from outside this crate. It's fields are private. We also implement an instantiating method. Methods can also be public or private. This method needs to be accessible from outside, so it's labelled `pub`. Note that written this way, the sensor instance takes ownership of the i2c bus.
 
 ```rust 
 #[derive(Debug)]
@@ -47,7 +47,7 @@ where
 
 #### Representation of Registers 
 
-Registers are represented as enums. Each variant has the register's address as value. The type `Register` implements a method that exposes the variant's address.
+The sensor's registers are represented as enums. Each variant has the register's address as value. The type `Register` implements a method that exposes the variant's address.
 
 ```Rust 
 #[derive(Clone, Copy)]
@@ -63,9 +63,9 @@ impl Register {
 
 ```
 
-#### read and write
+#### read_register() and write_register()
 
-We define a read and a write method, based on methods provided by the `embedded-hal` crate. Note how the read_register() method is based on a write_read method. The reason for this lie in the characteristics of the i2c protocol: we need to write a command over the i2c bus to be able to access bits in a register. Note how these methods don't have a `pub` before their name. Methods only have a `pub` if they have to be used from outside this crate. 
+We define a read and a write method, based on methods provided by the `embedded-hal` crate. They serve as helpers for more specific methods and as an abstraction that is adapted to a sensor with 8bit registers. Note how the `read_register()` method is based on a write_read()` method. The reason for this lie in the characteristics of the i2c protocol: wW need to write a command over the i2c bus to be able to read bits in a register. Helper methods can remain private as they don't need to be accessible from outside this crate. 
 
 ```rust
 impl<I2C, E>IMC42670P<I2C>
