--- a/book/src/04_3_i2c.md
+++ b/book/src/04_3_i2c.md
@@ -91,7 +91,7 @@ impl Register {
 
 #### read_register() and write_register()
 
-We define a read and a write method, based on methods provided by the `embedded-hal` crate. They serve as helpers for more specific methods and as an abstraction that is adapted to a sensor with 8bit registers. Note how the `read_register()` method is based on a write_read()` method. The reason for this lie in the characteristics of the i2c protocol: wW need to write a command over the i2c bus to be able to read bits in a register. Helper methods can remain private as they don't need to be accessible from outside this crate. 
+We define a read and a write method, based on methods provided by the `embedded-hal` crate. They serve as helpers for more specific methods and as an abstraction that is adapted to a sensor with 8-bit registers. Note how the `read_register()` method is based on a `write_read()` method. The reason for this lies in the characteristics of the I²C protocol: We first need to write a command over the I²C bus to specify which register we want to read from. Helper methods can remain private as they don't need to be accessible from outside this crate. 
 
 ```rust
 impl<I2C, E>IMC42670P<I2C>
