--- a/book/src/04_3_i2c.md
+++ b/book/src/04_3_i2c.md
@@ -129,7 +129,7 @@ TODO `i2c-sensor-reading/exercise/src/main.rs` is an exercise skeleton that will
 `i2c-sensor-reading/solution/src/main.rs` contains a working solution.
 
 
-* Define two pins, one as SDA and one as SCL. Use them to instantiate an Instance of the I2C peripheral. 
+* Define two pins, one as SDA and one as SCL. Use them to instantiate an Instance of the I²C peripheral. 
 
 * Using the existing driver crates, make an instance of each sensor, passing the I2C instance into them. 
 
