--- a/book/src/04_3_i2c.md
+++ b/book/src/04_3_i2c.md
@@ -131,7 +131,7 @@ TODO `i2c-sensor-reading/exercise/src/main.rs` is an exercise skeleton that will
 
 * Define two pins, one as SDA and one as SCL. Use them to instantiate an Instance of the I²C peripheral. 
 
-* Using the existing driver crates, make an instance of each sensor, passing the I2C instance into them. 
+* Using the existing driver crates, make an instance of each sensor, passing the I²C instance into them. 
 
 
 TODO `i2c-driver/exercise/src/main.rs` contains working code. Running it without modifying the driver file will yield errors. 
