--- a/book/src/04_3_i2c.md
+++ b/book/src/04_3_i2c.md
@@ -43,7 +43,7 @@ TODO `i2c-driver/exercise/src/imc42670p.rs` is a gap text of a very basic i2c IM
 
 #### Instance of the Sensor
 
-To use a peripheral sensor first you must get an instance of the it. The sensor is represented as a struct that contains it address and the i2c bus. This is done using traits defined in the `embedded-hal` crate. The struct is public as it needs to be accessible from outside this crate. It's fields are private. We also implement an instantiating method. Methods can also be public or private. This method needs to be accessible from outside, so it's labelled `pub`. Note that written this way, the sensor instance takes ownership of the i2c bus.
+To use a peripheral sensor first you must get an instance of the it. The sensor is represented as a struct that contains both its Device Address, and an object representing the I²C bus itself. This is done using traits defined in the `embedded-hal` crate. The struct is public as it needs to be accessible from outside this crate, but its fields are private. We also implement an instantiating method. Methods can also be public or private. This method needs to be accessible from outside, so it's labelled `pub`. Note that written this way, the sensor instance takes ownership of the I²C bus.
 
 ```rust 
 #[derive(Debug)]
