last minute fixes

--- a/book/src/03_5_3_mqtt.md
+++ b/book/src/03_5_3_mqtt.md
@@ -2,7 +2,9 @@
 
 ✅ Subscribe to `color_topic(uuid)`
 
-✅ Verify your subscription is working by logging the received topic and running the `example_client` in parallel in it's own terminal. The example_client is subscribed to the `ColorData.topic` and sends a board LED `color` roughly every second.
+✅ Run `host_client` in parallel in it's own terminal. The `host_client` publishes board LED `color` roughly every second.
+
+✅ Verify your subscription is working by logging the information received through the topic. 
 
 ✅ React to the LED commands by setting the newly received color to the board with `led.set_pixel(/* received color here */)`.
 
@@ -74,7 +76,7 @@ In the processing function, you will handle `Complete` messages. Use Rust Analyz
 
 - Implement the same procedure but by using MQTT hierarchy. Subscribe subscribing to all "command" messages, combining `cmd_topic_fragment(uuid)` with a trailing `#` wildcard.
 
-- in the example client, you will need to change to replace `color` with `command`. For example, unquote this line `//let command = Command::BoardLed(color);` and quote the corresponding `let color = ColorData::BoardLed(color);`
+- in the host client, you will need to change to replace `color` with `command`. For example, unquote this line `//let command = Command::BoardLed(color);` and quote the corresponding `let color = ColorData::BoardLed(color);`
 `
 
 - Use `enum Command` instead of `enum ColorData`. `enum Command` represents all possible commands (here: just `BoardLed`).
@@ -120,12 +122,12 @@ match message.details() {
 #### Hints!
 
 - Since you will be iterating over a MQTT topic, you will need to `split()` on a string returns an iterator. You can access a specific item from an iterator using [`nth()`](https://doc.rust-lang.org/std/iter/trait.Iterator.html#method.nth).
-- The solution implementing hiearchy can be run with `cargo espflash --release --example solution2 --monitor /dev/ttyUSB0`, while the solution without can be run with `cargo espflash --release --monitor /dev/ttyUSB0` or `cargo espflash --release --example solution1 --monitor /dev/ttyUSB0`
+- The solution implementing hierarchy can be run with `cargo espflash --release --example solution2 --monitor /dev/ttyUSB0`, while the solution without can be run with `cargo espflash --release --monitor /dev/ttyUSB0` or `cargo espflash --release --example solution1 --monitor /dev/ttyUSB0`
 
 ### Other tasks
 
 - leverage [`serde_json`](https://docs.serde.rs/serde_json/) to encode/decode your message data as JSON.
-- Send some messages with a large payload from the example client and process them on the microcontroller. Large messages will be delivered in parts instead of `Details::Complete`:
+- Send some messages with a large payload from the host client and process them on the microcontroller. Large messages will be delivered in parts instead of `Details::Complete`:
 
 ```rust
 InitialChunk(chunk_info) => { /* first chunk */},
@@ -135,5 +137,5 @@ You do not need to differentiate incoming chunks based on message ID, since at m
 
 ## Troubleshooting
 
-- `error: expected expression, found .` when building example client: update your stable Rust installation to 1.58 or newer
+- `error: expected expression, found .` When building host client: update your stable Rust installation to 1.58 or newer
 - MQTT messages not showing up? make sure all clients (board and workstation) use the same UUID (you can see it in the log output)
