--- a/book/src/03_5_2_mqtt.md
+++ b/book/src/03_5_2_mqtt.md
@@ -4,9 +4,9 @@
 
 ✅ You can find a prepared project skeleton in `intro/mqtt/exercise`. 
 
-✅ In `intro/mqtt/example_client` you can find a host run program that mimics the behavior of a second client. Run it in a separate terminal. Find more information about the example client below. 
+✅ In `intro/mqtt/host_client` you can find a host run program that mimics the behavior of a second client. Run it in a separate terminal using the `cargo run` command. Find more information about the host client below. 
 
-The client also generates randomly RGB colors, and publishes this in another topic.
+The client also generates random RGB colors and publishes them in a topic.
 **This is only relevant for the second part of this exercise**. 
 
 ❗️ Similar to the http exercises you need to configure your connection credentials in `cfg.toml` for both programs. Besides WiFi credentials you'll also need to add MQTT server details. Check each `cfg.toml.example` for required settings. Remember the name between brackets in the the `cfg.toml` file is the name of the package in `Cargo.toml`.
@@ -21,9 +21,9 @@ The structure of the exercises is as below. In this part, we will focus on the T
 
 ✅ Send an empty message under the `hello` topic to the broker. Use the `hello_topic(uuid)` utility function to generate a properly scoped topic.
 
-✅ Verify a successful publish by having a client connected that logs these messages. The `example_client` implements this behavior. You should run it in another terminal.
+✅ Verify a successful publish by having a client connected that logs these messages. The `host_client` implements this behavior. You should run it in another terminal.
 
-✅ In the loop at the end of your main function, publish the board temperature every second. Verify this, too.
+✅ In the loop at the end of your main function, publish the board temperature on `temperature_data_topic(uuid)` every second. Verify this, too.
 
 ## Establishing a connection
 
