Fix: troubleshooting tips

--- a/book/src/03_5_2_mqtt.md
+++ b/book/src/03_5_2_mqtt.md
@@ -85,4 +85,4 @@ client.publish(publish_topic, QoS::AtLeastOnce, false, payload)?;
 - `error: expected expression, found .` when building example client: update your stable Rust installation to 1.58 or newer
 - MQTT messages not showing up? make sure all clients (board and workstation) use the same UUID (you can see it in the log output)
 - Make sure the `cfg.toml` file is configured properly. The `example-client` has a `dbg!()` output at the start of the program, that shows `mqtt` configuration. It should output the content of your `cfg.toml` file.
-
+- `error: expected expression, found .` while running the host-client can be solved with `rustup update`
