add exercise text -basic

--- a/book/src/04_3_1_i2c.md
+++ b/book/src/04_3_1_i2c.md
@@ -1,21 +1,78 @@
-## I2C Sensor Reading Exercise
+## I2C Sensor Reading Exercise 
 
-TODO `i2c-sensor-reading/exercise/src/main.rs` is an exercise skeleton that will build. The task is to use an existing driver from crates.io to read out the temperature and humidity sensor over i2c. After that, a second sensor will be read out over the same i2c bus using `shared-bus`. The driver for the second sensor is available locally in `common/`.
+In this excercise you will learn how to read out sensors on the i2c protocol. 
+ 
+ 
+The board has two sensors that can be read via the I2C bus: `
+
+
+| Peripheral                | Part number  | Reference                                                                   | Crate | Address |
+|---------------------------|--------------|-----------------------------------------------------------------------------|-------|---------|
+| IMU                       | ICM-42670-P  | [Datasheet](https://invensense.tdk.com/download-pdf/icm-42670-p-datasheet/) | [Link](https://crates.io/crates/icm42670)   | 0x68 |
+| Temperature and Humidity  | SHTC3        | [Datasheet](https://www.sensirion.com/en/environmental-sensors/humidity-sensors/digital-humidity-sensor-shtc3-our-new-standard-for-consumer-electronics/)            | [Link](https://crates.io/crates/shtcx)       | 0x70 |
+
+
+ The task is to use an existing driver from crates.io to read out the temperature and humidity sensor over i2c. After that, a second sensor will be read out over the same i2c bus using `shared-bus`. The driver for the second sensor is available locally in `common/`.
+
+### Part 1: Reading Temperature & Humidity
+
+Create an instance of the of the Humidity sensor SHTC3 and read and print the values for humidity and temperature every 600 ms.
+
+#### Expected Output:
+
+```
+TEMP: [local temperature] °C
+HUM: [local humidity] %
+```
 
 `i2c-sensor-reading/solution/src/main.rs` contains a working solution.
 
+`i2c-sensor-reading/exercise/src/main.rs` contains skeleton code, that already contains necessary imports for this part. 
 
-* Define two pins, one as SDA and one as SCL. Use them to instantiate an Instance of the I²C peripheral. 
+#### Steps:
 
-* Using the existing driver crates, make an instance of each sensor, passing the I²C instance into them. 
+✅ Go to the `i2c-sensor-reading/exercise/` folder and open the relevant documentation with the following command:
+  
+```
+$ cargo doc --open
+```
+ 
+✅ Define two pins, one as SDA and one as SCL. Use them to create an Instance of the I²C peripheral. 
+
+| Signal     | GPIO        |
+|------------|-------------|
+| SDA        | GPIO10      |
+| SCL        | GPIO8       |
 
 
-TODO `i2c-driver/exercise/src/main.rs` contains working code. Running it without modifying the driver file will yield errors. 
+
+✅ Use the `shtcx` driver crate, make an instance of the SHTC3 sensor passing the I²C instance into them. Check the documentation for guidance. 
+
+✅ Make a measurement, and read the sensor values and print them. Check the documentation for guidance on sensor methods. 
+
+❗ Some sensors need some time to pass, between measurement and reading value. 
+❗ Watch out for the expected units!
+
+
+
+`i2c-driver/exercise/src/main.rs` contains working code. Running it without modifying the driver file will yield errors. 
 
 `i2c-driver/solution/src/imc42670p.rs` provides a solution to the task. 
 
 
+## Hints
+
+* There are methods that turn the sensor values into the desired unit. 
+
+### Part 2: Reading Accelerometer data. 
+
+Now, we want to read out the second sensor.
 
 
 
+ `i2c-driver/exercise/src/main.rs` contains working code skeleton. 
+
+`i2c-driver/exercise/src/main.rs` contains working code. Running it without modifying the driver file will yield errors. 
+
+`i2c-driver/solution/src/imc42670p.rs` provides a solution to the task. 
 
