add exercise text -basic

--- a/book/src/04_3_1_i2c.md
+++ b/book/src/04_3_1_i2c.md
@@ -130,3 +130,9 @@ TEMP: [local temperature] °C
 HUM: [local humidity] %
 ```
 
+
+ `i2c-driver/exercise/src/main.rs` contains working code skeleton. 
+
+`i2c-driver/exercise/src/main.rs` contains working code. Running it without modifying the driver file will yield errors. 
+
+`i2c-driver/solution/src/imc42670p.rs` provides a solution to the task. 
